--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</audio>
 
 	<script>
-		var audio = document.getElementById("myaudio");
+		var audio = document.getElementById("music");
 		audio.volume = 0.2;
 	</script>
 
@@ -25,7 +25,7 @@
 			<img id="img" src="">
 		</div>
 		<div id="heartTxt">
-			<span id="clickMe">Click!</span>
+			<span id="clickMe">กดทีเดียวพอนะ</span>
 			<div id="heart">
 				<button id="button" onclick="play()"></button>
 			</div>
