--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="./css/format.css">
 	</head>
 
-	<audio autoplay loop id="music">
+	<audio loop="loop" autoplay="autoplay" id="music">
 		<source src="music/music_2.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
