--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
 		<link rel="stylesheet" type="text/css" href="./css/format.css">
 	</head>
 
-	<audio loop="loop" autoplay="autoplay" id="music">
+	<audio loop="loop" autoplay="autoplay">
 		<source src="music/music_2.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
-
-	<script>
-		var audio = document.getElementById("music");
-		audio.volume = 0.2;
-	</script>
 
 	<body style="margin:0px">
 		<canvas></canvas>
