--- a/index.html
+++ b/index.html
@@ -46,12 +46,24 @@
 			var myImage = document.getElementById("img");
 			var myTxt = document.getElementById("Txt");
 			var imageArray = ["pic2/pic1.jpg", "pic2/pic2.jpg", "pic2/pic3.jpg", "pic2/pic4.jpg", "pic2/pic5.jpg", "pic2/pic6.jpg", 
-			"pic2/pic7.jpg", "pic2/pic8.jpg", "pic2/pic9.jpg", "pic2/pic10.jpg"];
+			"pic2/pic7.jpg", "pic2/pic8.jpg", "pic2/pic9.jpg", "pic2/pic10.jpg", "pic2/pic11.jpg", "pic2/pic12.jpg", "pic2/pic13.jpg"];
 			var imageIndex = 0;
-			var txtArray = ["ไปดูดาวที่ NARIT ด้วยกัน~", "ดูผมเธอดิเป็นจะงอยอีกแล้ว~ หน้าเราอย่างหลอนอ่ะ 5555555", "ขอจุ๊บมือโหน่ยย~(｡･ω･｡)ﾉ♡",
-			 "เล่นโทรศัพท์ไม่สนใจเราเลยย ;-;", "ว่าแล้วยังยิ้ม (ง︡'-'︠)ง", "ไอ้แก้มอ้วน~o(≧v≦)o", "แอบถ่ายเรานอนหรอ ᕴｰᴥｰᕵ",
-			 "โดนถ่ายคืนไปเส้!!!", "รูปเกือบคู่ เธอเหลือครึ่งตัว ༼つ ◕_◕ ༽つ", "ขอให้เป็นปีที่ดีนะงับบ รักเธอนะ"];
-			 var len = imageArray.length;
+			var txtArray = [
+			"ไปดูดาวที่ NARIT ด้วยกัน~", 
+			"ดูผมเธอดิเป็นจะงอยอีกแล้ว~ หน้าเราอย่างหลอนอ่ะ 5555555",
+			"ขอจุ๊บมือโหน่ยย~(｡･ω･｡)ﾉ♡",
+			"เล่นโทรศัพท์ไม่สนใจเราเลยย ;-;", 
+			"ว่าแล้วยังยิ้ม (ง︡'-'︠)ง", 
+			"ไอ้แก้มอ้วน~o(≧v≦)o", 
+			"แอบถ่ายเรานอนหรอ ᕴｰᴥｰᕵ",
+			"โดนถ่ายคืนไปเส้!!!", 
+			"รูปเกือบคู่ เธอเหลือครึ่งตัว ༼つ ◕_◕ ༽つ",
+			"ทำไมเราทำหน้าแบบนั้นอ่ะ",
+			"งื้ออ น่ารักสุดๆ แงงงง ละลายหมดแย้วว",
+			"รูปคู่จริงๆแล้วว งื้อน่ารักไหมม <3", 
+			"ขอให้เป็นปีที่ดีนะงับบ รักเธอนะงับบบ"
+			];
+			var len = imageArray.length;
 			var t = 0;
 		</script>
 		
