add more pic, change music, edit title

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<audio loop autoplay>
-		<source src="music/music_2.mp3" type="audio/mpeg">
+		<source src="music/music_1.mp3" type="audio/mpeg">
 		Your browser does not support the audio tag.
 	</audio>
 
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div id="content">
-			<h2 id="together">We have been together</h2>
+			<h2 id="together">เราอยู่ด้วยกันมา</h2>
 			<div id="timer">
 				<b id="d"></b> Days 
 				<b id="h"></b> Hours
@@ -46,7 +46,8 @@
 			var myImage = document.getElementById("img");
 			var myTxt = document.getElementById("Txt");
 			var imageArray = ["pic2/pic1.jpg", "pic2/pic2.jpg", "pic2/pic3.jpg", "pic2/pic4.jpg", "pic2/pic5.jpg", "pic2/pic6.jpg", 
-			"pic2/pic7.jpg", "pic2/pic8.jpg", "pic2/pic9.jpg", "pic2/pic10.jpg", "pic2/pic11.jpg", "pic2/pic12.jpg", "pic2/pic13.jpg"];
+			"pic2/pic7.jpg", "pic2/pic8.jpg", "pic2/pic9.jpg", "pic2/pic10.jpg", "pic2/pic11.jpg", "pic2/pic12.jpg", "pic2/pic14.jpg", 
+			"pic2/pic15.jpg", "pic2/pic16.jpg", "pic2/pic17.jpg", "pic2/pic18.jpg", "pic2/pic19.jpg", "pic2/pic20.jpg", "pic2/pic13.jpg"];
 			var imageIndex = 0;
 			var txtArray = [
 			"ไปดูดาวที่ NARIT ด้วยกัน~", 
@@ -61,6 +62,13 @@
 			"ทำไมเราทำหน้าแบบนั้นอ่ะ",
 			"งื้ออ น่ารักสุดๆ แงงงง ละลายหมดแย้วว",
 			"รูปคู่จริงๆแล้วว งื้อน่ารักไหมม <3", 
+			"พาเธอไปกินข้าว วันเกิด",
+			"รักนะงับบ",
+			"ไปพายเรือกัน น่ารักทีสุดเลยย",
+			"แล้วดูหน้าเรา 5555555",
+			"ไปกินข้าวด้วยกัน รูปนี้สวยดีไม่มีอะไร",
+			"พาเธอไปทำใบขับขี่ กลับมากินขนมกัน",
+			"เล่นเกมกับเธอ สนุกมากอยากเล่นดอีกก",
 			"ขอให้เป็นปีที่ดีนะงับบ รักเธอนะงับบบ"
 			];
 			var len = imageArray.length;
