edit pic path error

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			var myTxt = document.getElementById("Txt");
 			var imageArray = ["pic2/pic1.jpg", "pic2/pic2.jpg", "pic2/pic3.jpg", "pic2/pic4.jpg", "pic2/pic5.jpg", "pic2/pic6.jpg", 
 			"pic2/pic7.jpg", "pic2/pic8.jpg", "pic2/pic9.jpg", "pic2/pic10.jpg", "pic2/pic11.jpg", "pic2/pic12.jpg", "pic2/pic14.jpg", 
-			"pic2/pic15.jpg", "pic2/pic16.jpg", "pic2/pic17.jpg", "pic2/pic18.jpg", "pic2/pic19.jpg", "pic2/pic20.jpg", "pic2/pic13.jpg"];
+			"pic2/pic15.JPG", "pic2/pic16.JPG", "pic2/pic17.JPG", "pic2/pic18.jpg", "pic2/pic19.jpg", "pic2/pic20.jpg", "pic2/pic13.jpg"];
 			var imageIndex = 0;
 			var txtArray = [
 			"ไปดูดาวที่ NARIT ด้วยกัน~", 
