add emote to text

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
 			"โดนถ่ายคืนไปเส้!!!", 
 			"รูปเกือบคู่ เธอเหลือครึ่งตัว ༼つ ◕_◕ ༽つ",
 			"ทำไมเราทำหน้าแบบนั้นอ่ะ",
-			"งื้ออ น่ารักสุดๆ แงงงง ละลายหมดแย้วว",
+			"งื้ออ น่ารักสุดๆ แงงงง ละลายหมดแย้วว ʕ·ᴥ·ʔ",
 			"รูปคู่จริงๆแล้วว งื้อน่ารักไหมม <3", 
 			"พาเธอไปกินข้าว วันเกิด",
-			"รักนะงับบ",
-			"ไปพายเรือกัน น่ารักทีสุดเลยย",
-			"แล้วดูหน้าเรา 5555555",
-			"ไปกินข้าวด้วยกัน รูปนี้สวยดีไม่มีอะไร",
-			"พาเธอไปทำใบขับขี่ กลับมากินขนมกัน",
-			"เล่นเกมกับเธอ สนุกมากอยากเล่นดอีกก",
-			"ขอให้เป็นปีที่ดีนะงับบ รักเธอนะงับบบ"
+			"รักนะงับบ ( 。・o・)💗",
+			"ไปพายเรือกัน น่ารักทีสุดเลยย💕",
+			"แล้วดูหน้าเรา 5555555 (｡•́︿•̀｡)",
+			"ไปกินข้าวด้วยกัน รูปนี้สวยดีไม่มีอะไร ",
+			"พาเธอไปทำใบขับขี่ กลับมากินขนม 🍰",
+			"เล่นเกมกับเธอ สนุกมากอยากเล่นอีกก 💖",
+			"ขอให้เป็นปีที่ดีนะงับบ รักเธอนะงับบบ 🥰💕"
 			];
 			var len = imageArray.length;
 			var t = 0;
