Translate site to Thai with custom fonts and countdown

--- a/index.html
+++ b/index.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Anniversary</title>
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>เว็บครบรอบของเมฆกับเบียร์</title>
+    <!-- ฟอนต์น่ารัก -->
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Mali:wght@400;700&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Header Section -->
+    <!-- ส่วนหัว -->
     <header id="hero" class="hidden">
-        <h1>Happy Anniversary, My Love!</h1>
-        <h2>[Your Name] &amp; [Partner's Name]</h2>
+        <h1>ครบอีกปีแล้วนะ เบียร์</h1>
+        <h2>เมฆ &amp; เบียร์</h2>
         <div class="heart">&#10084;</div>
     </header>
 
-    <!-- Countdown Timer Section -->
+    <!-- นับถอยหลัง -->
     <section id="countdown" class="hidden">
-        <h2>Counting Down to Our Special Day</h2>
+        <h2>นับถอยหลังถึงวันครบรอบ</h2>
         <div class="timer">
-            <div><span id="days">0</span><small>Days</small></div>
-            <div><span id="hours">0</span><small>Hours</small></div>
-            <div><span id="minutes">0</span><small>Minutes</small></div>
-            <div><span id="seconds">0</span><small>Seconds</small></div>
+            <div><span id="days">0</span><small>วัน</small></div>
+            <div><span id="hours">0</span><small>ชั่วโมง</small></div>
+            <div><span id="minutes">0</span><small>นาที</small></div>
+            <div><span id="seconds">0</span><small>วินาที</small></div>
         </div>
     </section>
 
-    <!-- Our Story Section -->
+    <!-- เรื่องของเรา -->
     <section id="story" class="hidden">
-        <h2>Our Journey Together</h2>
+        <h2>เรื่องของเราตั้งแต่วันแรก</h2>
         <div class="timeline">
             <div class="event">
-                <h3>Date 1 - The Day We Met</h3>
-                <p>A short, sweet sentence about when we first met.</p>
+                <h3>19/03/2021 - วันที่เราเริ่มคบกัน</h3>
+                <p>ตั้งแต่วันนั้นก็ไม่เหงาอีกเลย</p>
             </div>
             <div class="event">
-                <h3>Date 2 - Our First Date</h3>
-                <p>A short, sweet sentence about our first date.</p>
+                <h3>เดตแรก</h3>
+                <p>ไปกินหมูกระทะแล้วหัวเราะกันจนท้องแข็ง</p>
             </div>
             <div class="event">
-                <h3>Date 3 - The 'Yes' Day</h3>
-                <p>A short, sweet sentence about our engagement or when we became official.</p>
+                <h3>ทริปแรกด้วยกัน</h3>
+                <p>ถึงจะหลงทางบ้างแต่ก็สนุกสุดๆ</p>
             </div>
             <div class="event">
-                <h3>Date 4 - Another Special Moment</h3>
-                <p>Another unforgettable memory together.</p>
+                <h3>อีกโมเมนต์ที่จำไม่ลืม</h3>
+                <p>ตอนช่วยกันทำกับข้าวแล้วน้ำมันกระเด็นใส่ ฮ่าๆ</p>
             </div>
         </div>
     </section>
 
-    <!-- Photo Gallery Section -->
+    <!-- อัลบั้มรูป -->
     <section id="gallery" class="hidden">
-        <h2>A Glimpse of Our Moments</h2>
+        <h2>ช่วงเวลาของเรา</h2>
         <div class="gallery-grid">
-            <img src="images/photo1.jpg" alt="Photo 1">
-            <img src="images/photo2.jpg" alt="Photo 2">
-            <img src="images/photo3.jpg" alt="Photo 3">
-            <img src="images/photo4.jpg" alt="Photo 4">
-            <img src="images/photo5.jpg" alt="Photo 5">
-            <img src="images/photo6.jpg" alt="Photo 6">
+            <img src="pic2/pic1.jpg" alt="รูป 1">
+            <img src="pic2/pic2.jpg" alt="รูป 2">
+            <img src="pic2/pic3.jpg" alt="รูป 3">
+            <img src="pic2/pic4.jpg" alt="รูป 4">
+            <img src="pic2/pic5.jpg" alt="รูป 5">
+            <img src="pic2/pic6.jpg" alt="รูป 6">
         </div>
     </section>
 
-    <!-- Modal for Gallery -->
+    <!-- โมดัลแสดงรูป -->
     <div id="modal" class="modal">
         <span class="close">&times;</span>
-        <img class="modal-content" id="modal-img" alt="Expanded Photo">
+        <img class="modal-content" id="modal-img" alt="ขยายรูป">
     </div>
 
-    <!-- Personal Message Section -->
+    <!-- ข้อความถึงเธอ -->
     <section id="message" class="hidden">
-        <h2>Why I Love You</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo nisl nec neque facilisis, ac volutpat magna feugiat. Curabitur euismod, nisl sit amet varius laoreet, arcu ex bibendum turpis, id ultrices odio sapien in turpis.</p>
+        <h2>เหตุผลที่เมฆชอบเบียร์</h2>
+        <p>อยู่ด้วยแล้วสบายใจ ถึงจะชอบงอแงแต่ก็น่ารักเสมอ ขอบคุณที่เดินมาด้วยกันนะ</p>
     </section>
 
     <!-- JS -->
