refactor: clean project structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- ฟอนต์น่ารัก -->
     <link href="https://fonts.googleapis.com/css2?family=Itim&family=Mali:wght@400;700&display=swap" rel="stylesheet">
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- ส่วนหัว -->
@@ -55,12 +55,12 @@
     <section id="gallery" class="hidden">
         <h2>ช่วงเวลาของเรา</h2>
         <div class="gallery-grid">
-            <img src="pic2/pic1.jpg" alt="รูป 1">
-            <img src="pic2/pic2.jpg" alt="รูป 2">
-            <img src="pic2/pic3.jpg" alt="รูป 3">
-            <img src="pic2/pic4.jpg" alt="รูป 4">
-            <img src="pic2/pic5.jpg" alt="รูป 5">
-            <img src="pic2/pic6.jpg" alt="รูป 6">
+            <img src="images/pic1.jpg" alt="รูป 1">
+            <img src="images/pic2.jpg" alt="รูป 2">
+            <img src="images/pic3.jpg" alt="รูป 3">
+            <img src="images/pic4.jpg" alt="รูป 4">
+            <img src="images/pic5.jpg" alt="รูป 5">
+            <img src="images/pic6.jpg" alt="รูป 6">
         </div>
     </section>
 
@@ -77,6 +77,6 @@
     </section>
 
     <!-- JS -->
-    <script src="script.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
