feat: celebrate monthly anniversaries

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div><span id="minutes">0</span><small>นาที</small></div>
             <div><span id="seconds">0</span><small>วินาที</small></div>
         </div>
+        <p id="elapsed"></p>
+        <p id="next-date"></p>
     </section>
 
     <!-- เรื่องของเรา -->
@@ -75,8 +77,8 @@
         <h2>เหตุผลที่เมฆชอบเบียร์</h2>
         <p>อยู่ด้วยแล้วสบายใจ ถึงจะชอบงอแงแต่ก็น่ารักเสมอ ขอบคุณที่เดินมาด้วยกันนะ</p>
     </section>
-
     <!-- JS -->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
